// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command palette opens after pressing / 1`] = `
<body>
  <div />
</body>
`;

exports[`command palette opens after pressing / 2`] = `
<body
  class="modal-open"
  data-rr-ui-modal-open=""
  style="padding-right: 1024px;"
>
  <div />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade modal show"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen-sm-down"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <input
            class="form-control"
            placeholder="Search..."
            type="text"
          />
        </div>
        <div
          class="modal-body"
        >
          <ul
            class="list-group"
          >
            <li
              aria-current="true"
              class="list-group-item active"
            >
              aa
            </li>
            <li
              aria-current="false"
              class="list-group-item "
            >
              ab
            </li>
            <li
              aria-current="false"
              class="list-group-item "
            >
              bb
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should filter commands based on input value 1`] = `
<body
  class="modal-open"
  data-rr-ui-modal-open=""
  style="padding-right: 2048px;"
>
  <div />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade modal show"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen-sm-down"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <input
            class="form-control"
            placeholder="Search..."
            type="text"
          />
        </div>
        <div
          class="modal-body"
        >
          <ul
            class="list-group"
          >
            <li
              aria-current="true"
              class="list-group-item active"
            >
              aa
            </li>
            <li
              aria-current="false"
              class="list-group-item "
            >
              ab
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should filter commands based on input value 2`] = `
<body
  class="modal-open"
  data-rr-ui-modal-open=""
  style="padding-right: 2048px;"
>
  <div />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade modal show"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen-sm-down"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <input
            class="form-control"
            placeholder="Search..."
            type="text"
          />
        </div>
        <div
          class="modal-body"
        >
          <ul
            class="list-group"
          >
            <li
              aria-current="true"
              class="list-group-item active"
            >
              aa
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
